--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ gems:
   - font-awesome-sass
   - kramdown
   - rouge
-
+  - jekyll-org-mode-converter
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "log", "Rakefile", "Rakefile.rb", "rakefile", "README.md", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "LICENSE", "vendor", "assets", "_plugins", "public/dormant"]
 
