--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ owner:
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        twitter.com/coyotespike
+  twitter:        coyotespike
   facebook:       
   github:         github.com/coyotespike
   stackexchange:  
