--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,15 +1,10 @@
 - name: Twitter
-  url: https://twitter.com/abcd
+  url: https://twitter.com/coyotespike
   class: fa fa-twitter-square
   title: "Follow me @coyotespike"
 
-- name: Google Plus
-  url: https://plus.google.com/+foo
-  class: fa fa-google-plus-square
-  title: "Follow me +coyotespike"
-
 - name: GitHub
-  url: https://github.com/xyz123abc
+  url: https://github.com/coyotespike
   class: fa fa-github-square
   title: Code repository
 
