--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 title: Gravity
 email: hemangsk@gmail.com
 description: The Liberal Jekyll Theme
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "coyotespike.github.io" # the base hostname & protocol for your site
 twitter_username: hemang_kumar
 github_username:  hemangsk
 paginate: 5
