--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ title: A Rhythm in Notion
 email: timothy.roy@protonmail.ch
 description: Small(er) Steps Toward a Much Better World
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "coyotespike.github.io" # the base hostname & protocol for your site
+url: "/" # the base hostname & protocol for your site
 twitter_username: coyotespike 
 github_username:  coyotespike
 paginate: 5
-theme-dark: true #Set to true to change to dark website theme
+theme-dark: false
 
 plugins: [jekyll-paginate, kramdown]
 # Build settings
