--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: A Rhythm in Notion
 email: timothy.roy@protonmail.ch
 description: Small(er) Steps Toward a Much Better World
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "coyotespike.github.io" # the subpath of your site, e.g. /blog
 url: "/" # the base hostname & protocol for your site
 twitter_username: coyotespike 
 github_username:  coyotespike
